[*] Refactoring and add NONE as mock game control